--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -3,7 +3,7 @@ title: "What is Elementary?"
 mode: "wide"
 
 ---
-Elementary helps data teams solve one of the biggest challenges of analytics and AI: data quality. As pipelines grow in complexity, teams are overwhelmed by test maintenance, incident triage, and governance tasks that steal focus from innovation. 
+***Elementary helps data teams solve one of the biggest challenges of analytics and AI: data quality.*** As pipelines grow in complexity, teams are overwhelmed by test maintenance, incident triage, and governance tasks that steal focus from innovation. 
 
 Built to integrate natively with dbt, Elementary brings everything you need to manage and scale data quality—from detection to resolution—all in one place.
 
@@ -12,10 +12,9 @@ Built to integrate natively with dbt, Elementary brings everything you need to m
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747823535/image_8_jizmvr.png" />
 
 
+Elementary offers a modular observability stack built for dbt-based data workflows. At the foundation is an open-source dbt package that captures key metadata and test results from your dbt project. This package powers both the self-hosted CLI and the fully managed Cloud Platform, which build on top of it to provide deeper visibility, automation, and collaboration features.
 
 ## Elementary’s Products
-
-Elementary offers a modular observability stack built for dbt-based data workflows. At the foundation is an open-source dbt package that captures key metadata and test results from your dbt project. This package powers both the self-hosted CLI and the fully managed Cloud Platform, which build on top of it to provide deeper visibility, automation, and collaboration features.
 
 Whether you're starting small or scaling observability across your organization, you can choose the setup that fits your team—while unlocking more value as your needs evolve.
 
