--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -11,10 +11,9 @@ Built to integrate natively with dbt, Elementary brings everything you need to m
 
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747823535/image_8_jizmvr.png" />
 
-
 Elementary offers a modular observability stack built for dbt-based data workflows. At the foundation is an open-source dbt package that captures key metadata and test results from your dbt project. This package powers both the self-hosted CLI and the fully managed Cloud Platform, which build on top of it to provide deeper visibility, automation, and collaboration features.
 
-## Elementary’s Products
+## Products
 
 Whether you're starting small or scaling observability across your organization, you can choose the setup that fits your team—while unlocking more value as your needs evolve.
 
@@ -32,7 +31,7 @@ Setup Elementary OSS [here](https://docs.elementary-data.com/oss/quickstart/quic
 
 ### [**Elementary Cloud Platform**](/cloud/introduction)
 
-A fully managed platform built on top of the dbt package, designed to help teams improve data quality with minimal setup and operational overhead. It brings everything together in one place: an intuitive UI, column-level lineage from source to BI, incident management tools, alerting, AI automations and a searchable data catalog. This makes it easier to explore issues, understand their impact, and collaborate across teams.
+A fully managed platform built on top of the dbt package, designed to help teams improve data quality with minimal setup and operational overhead. It brings everything together in one place: an intuitive UI, column-level lineage from source to BI, incident management tools, advanced alerting and a searchable data catalog. With built-in AI agents, Elementary automates manual workflows like test generation, incident resolution, and metadata management—while keeping your team in control through versioned, PR-based changes and strict security standards.
 
 In addition to the tests defined in your dbt project, the Cloud Platform includes automated, ML-powered monitors that detect anomalies in freshness and volume—surfacing problems early without manual configuration.
 
