--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -3,7 +3,7 @@ title: "What is Elementary?"
 mode: "wide"
 
 ---
-***Elementary helps data teams solve one of the biggest challenges of analytics and AI: data quality.*** As pipelines grow in complexity, teams are overwhelmed by test maintenance, incident triage, and governance tasks that steal focus from innovation. 
+**Elementary helps data teams solve one of the biggest challenges of analytics and AI: data quality.** As pipelines grow in complexity, teams are overwhelmed by test maintenance, incident triage, and governance tasks that steal focus from innovation. 
 
 Built to integrate natively with dbt, Elementary brings everything you need to manage and scale data quality—from detection to resolution—all in one place.
 
