--- a/docs/cloud/what-is-elementary.mdx
+++ b/docs/cloud/what-is-elementary.mdx
@@ -3,7 +3,8 @@ title: "What is Elementary?"
 mode: "wide"
 
 ---
-**Elementary helps data teams solve one of the biggest challenges of analytics and AI: data quality.** As pipelines grow in complexity, teams are overwhelmed by test maintenance, incident triage, and governance tasks that steal focus from innovation. 
+**Elementary helps data teams solve one of the biggest challenges of analytics and AI: data quality.**
+As pipelines grow in complexity, teams are overwhelmed by test maintenance, incident triage, and governance tasks that steal focus from innovation. 
 
 Built to integrate natively with dbt, Elementary brings everything you need to manage and scale data quality—from detection to resolution—all in one place.
 
@@ -11,7 +12,7 @@ Built to integrate natively with dbt, Elementary brings everything you need to m
 
 <img src="https://res.cloudinary.com/do5hrgokq/image/upload/v1747823535/image_8_jizmvr.png" />
 
-Elementary offers a modular observability stack built for dbt-based data workflows. At the foundation is an open-source dbt package that captures key metadata and test results from your dbt project. This package powers both the self-hosted CLI and the fully managed Cloud Platform, which build on top of it to provide deeper visibility, automation, and collaboration features.
+Elementary offers a modular observability stack built for dbt-based data workflows. At the foundation is an open-source dbt package that captures key metadata and test results from your dbt project. This package powers both the self-hosted CLI and the fully managed Cloud Platform, which is built on top of it to provide wider visibility, automations, scale and advanced reports.
 
 ## Products
 
@@ -39,7 +40,7 @@ Designed to integrate with your entire data stack, it helps teams understand, tr
 
 Learn more about Elementary Cloud’s features and integrations [here](https://docs.elementary-data.com/cloud/introduction), and get started with a 30-day free trial [here](https://docs.elementary-data.com/quickstart).
 
-To further understand the differences, check out the full **OSS vs. Cloud comparison**.
+To further understand the differences, check out the full [**OSS vs. Cloud comparison**](/cloud/cloud-vs-oss).
 
 ## **Security and Privacy**
 
@@ -58,5 +59,5 @@ Learn more about how Elementary ensures security and privacy [here](https://docs
 
 **Want to know more?**
 
-- Book a call with our team
-- Reach out on Slack
+- [Book a call with our team](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs)
+- [Reach out on Slack](https://elementary-community.slack.com/ssb/redirect)
