--- a/docs/cloud/general/ai-privacy-policy.mdx
+++ b/docs/cloud/general/ai-privacy-policy.mdx
@@ -4,12 +4,9 @@ icon: "user-lock"
 ---
 
 At Elementary, we are committed to maintaining the highest standards of data privacy and protection. This AI Privacy Policy outlines how we handle data in the context of our AI-powered features, including our suite of intelligent agents.
-
-### 1. Overview of AI Features
-
 Elementary’s AI features are designed to enhance the user experience across key workflows—enabling natural language responses, automated data exploration, intelligent issue triage and resolution, proactive test and governance recommendations, and query optimization. These features are strictly opt-in and must be explicitly enabled for each customer instance.
 
-### 2. Data Handling & Anonymization
+### Data Handling & Anonymization
 
 Elementary is committed to minimizing data exposure and ensuring user privacy in all AI-powered workflows. When using AI features, only the minimal context necessary to fulfill the requested functionality is processed — such as metadata, anonymized prompts, or structural test information.
 
@@ -17,7 +14,7 @@ No personally identifiable information (PII) or customer-specific identifiers ar
 
 All AI processing takes place within **Amazon Bedrock**, a secure environment within AWS. This ensures that your data remains fully contained within your cloud region and never leaves the AWS infrastructure.
 
-### 3. Third-Party AI Providers
+### Third-Party AI Providers
 
 Elementary’s AI features are powered by leading large language models hosted through **Amazon Bedrock**, a secure AWS-managed environment. This architecture ensures that:
 
@@ -27,16 +24,16 @@ Elementary’s AI features are powered by leading large language models hosted t
 
 Amazon Bedrock may access models from third-party providers such as **Anthropic** and **OpenAI**. However, these models are accessed **via Bedrock** — your data remains within AWS at all times.
 
-### 4. Customer Instance Isolation
+### Customer Instance Isolation
 
 AI interactions are scoped strictly to each customer’s instance. No data is shared between tenants. Responses are routed back only to the initiating instance. Our infrastructure uses per-instance storage and 2FA-protected admin access.
 
-### 5. Data Retention and Deletion
+### Data Retention and Deletion
 
 - No AI request data is stored beyond the scope of processing.
 - General client data is retained for a maximum of one week, or deleted immediately upon account closure.
 
-### 6. Opt-Out Controls
+### Opt-Out Controls
 
 AI functionality can be completely disabled at the instance level. Customers may also selectively enable only the features they wish to use.
 
@@ -45,4 +42,4 @@ AI functionality can be completely disabled at the instance level. Customers may
 Our AI processing aligns with:
 
 - **GDPR**, **UK GDPR**, **CCPA**, and other global data privacy regulations.
-- Security best practices, including those outlined in our [Data Protection Agreement](https://www.notion.so/AI-agents-1fe621a084bf803494a4def17328e234?pvs=21).
+- Security best practices, including those outlined in our [Data Protection Agreement](https://www.elementary-data.com/privacy).
