--- a/docs/cloud/general/ai-privacy-policy.mdx
+++ b/docs/cloud/general/ai-privacy-policy.mdx
@@ -3,17 +3,9 @@ title: "AI Privacy Policy"
 icon: "user-lock"
 ---
 
-**We are committed to maintaining the highest standards of data privacy and protection. This AI Privacy Policy outlines how we handle data in the context of our AI-powered features, including our [suite of intelligent agents](/cloud/agents).**
+**We are committed to maintaining the highest standards of data privacy and protection. This AI Privacy Policy outlines how we handle data in the context of our AI-powered features, including our [suite of AI agents](/cloud/agents).**
 
-Elementary’s AI features are designed to enhance the user experience across key workflows—enabling natural language responses, automated data exploration, intelligent issue triage and resolution, proactive test and governance recommendations, and query optimization. These features are strictly opt-in and must be explicitly enabled for each customer instance.
-
-### Data Handling & Anonymization
-
-Elementary is committed to minimizing data exposure and ensuring user privacy in all AI-powered workflows. When using AI features, only the minimal context necessary to fulfill the requested functionality is processed — such as metadata, anonymized prompts, or structural test information.
-
-No personally identifiable information (PII) or customer-specific identifiers are shared with AI models unless explicitly configured by the customer for a particular feature. Most features are designed to operate entirely on anonymized metadata and structured inputs.
-
-All AI processing takes place within **Amazon Bedrock**, a secure environment within AWS. This ensures that your data remains fully contained within your cloud region and never leaves the AWS infrastructure.
+Elementary’s AI features are designed to enhance the user experience across key workflows, enabling natural language responses, automated data exploration, intelligent issue triage and resolution, proactive test and governance recommendations, and query optimization. These features are strictly opt-in and must be explicitly enabled for each customer instance.
 
 ### Third-Party AI Providers
 
@@ -23,7 +15,15 @@ Elementary’s AI features are powered by leading large language models hosted t
 - **No data is sent to external model providers directly by Elementary.**
 - **No data used for AI inference is stored or used for training by any provider.**
 
-Amazon Bedrock may access models from third-party providers such as **Anthropic** and **OpenAI**. However, these models are accessed **via Bedrock** — your data remains within AWS at all times.
+Amazon Bedrock may access models from third-party providers such as **Anthropic** and **OpenAI**. However, these models are accessed **via Bedrock** - your data remains within AWS at all times.
+
+### Data Handling & Anonymization
+
+Elementary is committed to minimizing data exposure and ensuring user privacy in all AI-powered workflows. When using AI features, only the minimal context necessary to fulfill the requested functionality is processed, such as metadata, anonymized prompts, or structural test information.
+
+No personally identifiable information (PII) or customer-specific identifiers are shared with AI models unless explicitly configured by the customer for a particular feature. Most features are designed to operate entirely on anonymized metadata and structured inputs.
+
+All AI processing takes place within **Amazon Bedrock**, a secure environment within AWS. This ensures that your data remains fully contained within your cloud region and never leaves the AWS infrastructure.
 
 ### Customer Instance Isolation
 
