--- a/docs/cloud/general/ai-privacy-policy.mdx
+++ b/docs/cloud/general/ai-privacy-policy.mdx
@@ -44,3 +44,9 @@ Our AI processing aligns with:
 
 - **GDPR**, **UK GDPR**, **CCPA**, and other global data privacy regulations.
 - Security best practices, including those outlined in our [Data Protection Agreement](https://www.elementary-data.com/privacy).
+
+## Have any more questions?
+
+We would be happy to answer!
+Reach out to us on [email](mailto:legal@elementary-data.com) or [Slack](https://elementary-data.com/community).
+
