--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -3,14 +3,32 @@ title: "Triage & resolution agent"
 icon: "toolbox"
 ---
 
-
 The **Triage & Resolution agent** is your always-on assistant for **automated incident investigation and resolution**. Instead of spending hours debugging broken pipelines or tracking down elusive root causes, this agent does the heavy lifting for you — allowing you to focus on delivering business value rather than fighting fires.
 
 Whether it’s an **operational issue** (like a model failure) or a **data quality anomaly** (like a failed assertion), this agent will proactively analyze the incident, trace its origin, assess the impact, and, when possible, help you resolve it automatically.
 
 ## Using the Triage & Resolution agent
 
-From the **Incident Management screen**, click **“Investigate with AI”** to trigger the agent. It will begin analyzing the incident and surface insights. You can follow along, ask clarifying questions, and when you're ready, allow the agent to **open a pull request** with its suggested fix — all within your review flow.
+From the **Incident Management screen**, click **“Investigate with AI”** to trigger the agent. It will begin analyzing the incident and surface insights. You can follow along, ask clarifying questions, and when you're ready, allow the agent to **open a pull request** with its suggested fix - all within your review flow.
+
+<Frame>
+  <div style={{ paddingBottom: "64.98194945848375%" }}>
+    <iframe
+      src="https://www.loom.com/embed/e341f158943e4cf68271251e3e89a389?sid=acad086a-7c8c-4dca-981c-7c120622079e"
+      frameborder="0"
+      webkitAllowFullScreen
+      mozAllowFullScreen
+      allowfullscreen
+      style={{
+        position: "absolute",
+        top: 0,
+        left: 0,
+        width: "100%",
+        height: "100%",
+      }}
+    ></iframe>
+  </div>
+</Frame>
 
 ## Key Capabilities
 
@@ -48,4 +66,4 @@ Once the problem is identified, the agent can:
 
 Designed for **hands-on data professionals**, including data engineers, analytics engineers, and platform teams, who need a faster, more reliable way to stay on top of incidents without getting buried in triage work.
 
-We take data privacy seriously — read our **AI Privacy Policy** to understand how AI features are secured.
+We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.
