--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -3,6 +3,8 @@ title: "Triage & resolution agent"
 icon: "toolbox"
 ---
 
+<Check>We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
+
 The **Triage & Resolution agent** is your always-on assistant for **automated incident investigation and resolution**. Instead of spending hours debugging broken pipelines or tracking down elusive root causes, this agent does the heavy lifting for you — allowing you to focus on delivering business value rather than fighting fires.
 
 Whether it’s an **operational issue** (like a model failure) or a **data quality anomaly** (like a failed assertion), this agent will proactively analyze the incident, trace its origin, assess the impact, and, when possible, help you resolve it automatically.
@@ -65,5 +67,3 @@ Once the problem is identified, the agent can:
 ## Who It’s For
 
 Designed for **hands-on data professionals**, including data engineers, analytics engineers, and platform teams, who need a faster, more reliable way to stay on top of incidents without getting buried in triage work.
-
-We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.
