add catalog agent

--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -80,3 +80,6 @@ Once suggested changes are ready, the agent can:
 ### Who It’s For
 
 Built for **data platform teams, analytics engineers, and governance leads** who want to increase metadata coverage, enforce governance policies, and ensure their data is ready for AI — all without adding manual overhead.
+
+
+<Check>We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
