--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -65,17 +65,11 @@ The agent suggests or autofills:
 
 ### Sensitive Data Enforcement
 
-Sensitive fields are automatically detected and checked to ensure:
-
-- Appropriate tagging is applied
-- No propagation to unauthorized downstream assets
+Sensitive fields are automatically detected and checked to ensure appropriate tagging is applied, and that there's no propagation to unauthorized downstream assets
 
 ### Pull Request Automation
 
-Once suggested changes are ready, the agent can:
-
-- Propose metadata improvements
-- Open a **pull request** for you to review and apply
+Once suggested changes are ready, the agent will open a **pull request** for you to review and apply.
 
 ### Who It’s For
 
