--- a/docs/cloud/ai-agents/catalog-agent.mdx
+++ b/docs/cloud/ai-agents/catalog-agent.mdx
@@ -3,9 +3,7 @@ title: "Governance agent"
 icon: "book-open"
 ---
 
-**The Catalog Agent helps data analysts, business users, and downstream AI tools discover the most relevant and trustworthy data assets, without relying on technical teams to guide every decision.**
-
-By interpreting natural language questions and surfacing the right context—including data health, lineage, and metric definitions—it enables faster, more confident access to the data people need. The agent acts as an intelligent layer on top of your catalog, making your data more accessible, explainable, and AI-ready.
+**The Catalog Agent allows data analysts, business users, and downstream AI tools discover the most relevant and trustworthy data assets, without relying on technical teams to guide every decision.** By interpreting natural language questions and surfacing the right context—including data health, lineage, and metric definitions—it enables faster, more confident access to the data people need. The agent acts as an intelligent layer on top of your catalog, making your data more accessible, explainable, and AI-ready.
 
 By enriching data with structure, health signals, and semantic context, the Catalog Agent lays the groundwork for more accurate and effective AI-powered workflows across your organization.
 
@@ -26,11 +24,7 @@ The Catalog Agent supports both human users and other AI systems in navigating y
 
 ### Intelligent Discovery
 
-Helps users find the right data using:
-
-- Metadata such as tags, descriptions, owners, and usage patterns
-- Lineage to understand dependencies and impact
-- Semantic layers *(coming soon)* from dbt, BI tools, or external catalogs for metric-level context
+Helps users find the right data using metadata (tags, descriptions, owners, lineage to understand dependencies and impact and semantic layers *(coming soon)* from dbt, BI tools, or external catalogs for metric-level context
 
 ### Trust and Quality Signals
 
@@ -43,7 +37,6 @@ For every asset, the agent provides real-time indicators of reliability:
 ### Who It’s For
 
 The Catalog Agent is built for **data analysts**, **business users**, **AI copilots**, and **intelligent applications** that need to find and understand the right data without making the data team a bottleneck.
-
 
 <Check>We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
 
