--- a/docs/cloud/ai-agents/catalog-agent.mdx
+++ b/docs/cloud/ai-agents/catalog-agent.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Governance agent"
+title: "Catalog agent"
 icon: "book-open"
 ---
 
@@ -19,6 +19,26 @@ It will:
 - Explain how the data is used and whether it can be trusted
 
 The Catalog Agent supports both human users and other AI systems in navigating your data with clarity and confidence.
+
+
+<Frame>
+  <div style={{ paddingBottom: "64.98194945848375%" }}>
+    <iframe
+      src="https://www.loom.com/embed/6e64e499d5a9451b8b5cca41994395d6?sid=a921bd75-ad4d-4c90-8e4f-4f7a620b4e37"
+      frameborder="0"
+      webkitAllowFullScreen
+      mozAllowFullScreen
+      allowfullscreen
+      style={{
+        position: "absolute",
+        top: 0,
+        left: 0,
+        width: "100%",
+        height: "100%",
+      }}
+    ></iframe>
+  </div>
+</Frame>
 
 ### Key Capabilities
 
