--- a/docs/cloud/ai-agents/catalog-agent.mdx
+++ b/docs/cloud/ai-agents/catalog-agent.mdx
@@ -10,13 +10,7 @@ By enriching data with structure, health signals, and semantic context, the Cata
 ### Using the Catalog Agent
 
 Open the Catalog Agent to start a conversation. Just ask a question like **“Which table should I use to analyze user retention?”** or **“Can I trust the orders table?”** and the agent will guide you to the right assets or insights.
-
-It will:
-
-- Interpret your request using metadata, lineage, and semantic context
-- Suggest relevant datasets, tables, or metrics
-- Surface freshness, incident status, and test results
-- Explain how the data is used and whether it can be trusted
+The agent will interpret your request using metadata, lineage, and semantic context, and suggest relevant datasets, tables, or metrics. It will also surface freshness, incident status, and test results, and explain how the data is used and whether it can be trusted.
 
 The Catalog Agent supports both human users and other AI systems in navigating your data with clarity and confidence.
 
