--- a/docs/cloud/ai-agents/performance-cost-agent.mdx
+++ b/docs/cloud/ai-agents/performance-cost-agent.mdx
@@ -15,6 +15,26 @@ You can trigger the agent from a slow or costly query, or from any asset flagged
 
 From there, the agent suggests targeted optimizations—both in the query code and in the configuration of resource-intensive steps. It estimates potential savings in runtime and cost, so you can see the impact before applying changes. Once you're ready, the agent can open a pull request with its proposed improvements and iterate further until the pipeline meets your performance goals.
 
+
+<Frame>
+  <div style={{ paddingBottom: "64.98194945848375%" }}>
+    <iframe
+      src="https://www.loom.com/share/926ed71b77e94389975719230b104903?sid=4e41aaec-661f-4437-a25b-2a2c99b95c17"
+      frameborder="0"
+      webkitAllowFullScreen
+      mozAllowFullScreen
+      allowfullscreen
+      style={{
+        position: "absolute",
+        top: 0,
+        left: 0,
+        width: "100%",
+        height: "100%",
+      }}
+    ></iframe>
+  </div>
+</Frame>
+
 ### Key Capabilities
 
 ### Performance Diagnostics and Optimization
