--- a/docs/cloud/ai-agents/catalog-agent.mdx
+++ b/docs/cloud/ai-agents/catalog-agent.mdx
@@ -3,7 +3,7 @@ title: "Catalog agent"
 icon: "book-open"
 ---
 
-**The Catalog Agent allows data analysts, business users, and downstream AI tools discover the most relevant and trustworthy data assets, without relying on technical teams to guide every decision.** By interpreting natural language questions and surfacing the right context—including data health, lineage, and metric definitions—it enables faster, more confident access to the data people need. The agent acts as an intelligent layer on top of your catalog, making your data more accessible, explainable, and AI-ready.
+**The Catalog Agent allows data analysts, business users, and downstream AI tools discover the most relevant and trustworthy data assets, without relying on technical teams to guide every decision.** By interpreting natural language questions and surfacing the right context—including data health, lineage, and metric definitions—it enables faster, more confident access to the data people need.
 
 By enriching data with structure, health signals, and semantic context, the Catalog Agent lays the groundwork for more accurate and effective AI-powered workflows across your organization.
 
