--- a/docs/cloud/ai-agents/test-recommendation-agent.mdx
+++ b/docs/cloud/ai-agents/test-recommendation-agent.mdx
@@ -5,7 +5,7 @@ icon: "vial-circle-check"
 
 **Make sure you're covered—not by how many tests you write, but by how many problems you catch.** The Test Coverage Agent helps you achieve meaningful, consistent test coverage across your data pipelines, without the manual overhead.
 
-It analyzes your data model, usage patterns, lineage, and existing tests to recommend what to test and where. It adapts to your team's style, reduces alert fatigue, and preserves consistency across your test suite. The result is higher data quality, fewer blind spots, and more time focused on building—not debugging.
+It analyzes your data model, usage patterns, lineage, and existing tests to recommend what to test and where. It adapts to your team's style, reduces alert fatigue, and preserves consistency across your test suite. The result is higher data quality, fewer blind spots, and more time focused on building - not debugging.
 
 ### Using the Test Coverage Agent
 
