--- a/docs/cloud/ai-agents/catalog-agent.mdx
+++ b/docs/cloud/ai-agents/catalog-agent.mdx
@@ -3,7 +3,7 @@ title: "Catalog agent"
 icon: "book-open"
 ---
 
-**The Catalog Agent helps data analysts, business users, and AI tools find the right data on their own—so engineers don’t have to be the bottleneck.** By interpreting natural language questions and surfacing the right context—including data health, lineage, and metric definitions—it enables faster, more confident access to the data people need. The Catalog Agent lays the groundwork for more accurate and effective AI-powered workflows across your organization.
+**The Catalog Agent helps data analysts, business users, and AI tools find the right data on their own, so engineers don’t have to be the bottleneck.** By interpreting natural language questions and surfacing the right context—including data health, lineage, and metric definitions—it enables faster, more confident access to the data people need. The Catalog Agent lays the groundwork for more accurate and effective AI-powered workflows across your organization.
 
 ### Using the Catalog Agent
 
