--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -2,10 +2,9 @@
 title: "Triage & resolution agent"
 icon: "toolbox"
 ---
+**Built for the people who always get pulled in when data breaks - it automates incident investigation, so you don’t have to spend your time piecing things together.** It analyzes the root cause, maps the impact, and suggests concrete next steps. The result is a shift from reactive firefighting to a streamlined, automated workflow.
 
-The **Triage & Resolution agent** is your always-on assistant for **automated incident investigation and resolution**. Instead of spending hours debugging broken pipelines or tracking down elusive root causes, this agent does the heavy lifting for you — allowing you to focus on delivering business value rather than fighting fires.
-
-Whether it’s an **operational issue** (like a model failure) or a **data quality anomaly** (like a failed assertion), this agent will proactively analyze the incident, trace its origin, assess the impact, and, when possible, help you resolve it automatically.
+Whether it's a failed test, a model issue, or an unexpected anomaly, it inspects recent code changes, execution history, lineage, and, when allowed, the data itself. It prioritizes the incidents that matter, proposes a fix, and can open a pull request for you. That way, incidents stop slowing you down, and pipelines begin to fix themselves.
 
 ## Using the Triage & Resolution agent
 
