--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -2,7 +2,7 @@
 title: "Triage & resolution agent"
 icon: "toolbox"
 ---
-**Built for the people who always get pulled in when data breaks - it automates incident investigation, so you don’t have to spend your time piecing things together.** It analyzes the root cause, maps the impact, and suggests concrete next steps. The result is a shift from reactive firefighting to a streamlined, automated workflow.
+It automates root cause analysis, clarifies the impact, and suggests actionable fixes—so you spend less time triaging and more time solving what matters. The result is a shift from manual investigation to a faster, more focused workflow, allowing you to focus on delivering business value rather than fighting fires.
 
 Whether it's a failed test, a model issue, or an unexpected anomaly, it inspects recent code changes, execution history, lineage, and, when allowed, the data itself. It prioritizes the incidents that matter, proposes a fix, and can open a pull request for you. That way, incidents stop slowing you down, and pipelines begin to fix themselves.
 
