--- a/docs/cloud/ai-agents/ai-agents.mdx
+++ b/docs/cloud/ai-agents/ai-agents.mdx
@@ -13,7 +13,7 @@ icon: "magic"
   </Card>
    <Card title="Catalog" icon="book-open" href="/cloud/ai-agents/catalog-agent" >
   </Card>
-   <Card title="Performance and Cost" icon="comments-dollar" href="/cloud/ai-agents/performance-cost-agent" >
+   <Card title="Performance & Cost" icon="comments-dollar" href="/cloud/ai-agents/performance-cost-agent" >
   </Card>
    <Card title="AI Privacy Policy" icon="user-lock" href="/cloud/general/security-and-privacy" >
   </Card>
