--- a/docs/cloud/ai-agents/ai-agents.mdx
+++ b/docs/cloud/ai-agents/ai-agents.mdx
@@ -3,6 +3,14 @@ title: "Elementary AI Agents"
 icon: "magic"
 ---
 
+Ella is the AI-powered layer that helps automate core data quality tasks—so teams can focus on impact, not overhead.
+
+She detects coverage gaps, recommends and generates tests, traces root causes, fixes issues, optimizes queries, and surfaces missing metadata—making your data AI-ready and compliant by default.
+
+Ella runs on self-hosted models through Amazon Bedrock. No sensitive data is stored or shared, and all features are opt-in by default. Every action flows through a pull request, keeping your team fully in control.
+
+Her behavior is guided by clear, reviewable AI policies that align with your governance standards. Ella’s agents handle the busywork so your team can stay focused on what moves the business forward.
+
 
 <CardGroup cols={3}>
   <Card title="Governance" icon="tags" href="/cloud/ai-agents/governance-agent" >
