--- a/docs/cloud/ai-agents/ai-agents.mdx
+++ b/docs/cloud/ai-agents/ai-agents.mdx
@@ -3,7 +3,7 @@ title: "Elementary AI Agents"
 icon: "magic"
 ---
 
-Ella is the AI-powered layer that helps automate core data quality tasks—so teams can focus on impact, not overhead.
+**Ella is the AI-powered layer that helps automate and enhance core data quality tasks, so teams can focus on impact, not overhead.**
 
 She detects coverage gaps, recommends and generates tests, traces root causes, fixes issues, optimizes queries, and surfaces missing metadata—making your data AI-ready and compliant by default.
 
