--- a/docs/cloud/ai-agents/ai-agents.mdx
+++ b/docs/cloud/ai-agents/ai-agents.mdx
@@ -3,7 +3,7 @@ title: "Elementary AI Agents"
 icon: "magic"
 ---
 
-**Ella is the AI-powered layer that helps automate and enhance core data quality tasks, so teams can focus on impact, not overhead.**
+**Ella is the intelligence layer that automates and enhances core data quality tasks. She allows your team to focus on value, not overhead.**
 
 She detects coverage gaps, recommends and generates tests, traces root causes, fixes issues, optimizes queries, and surfaces missing metadata—making your data AI-ready and compliant by default.
 
@@ -23,6 +23,6 @@ Her behavior is guided by clear, reviewable AI policies that align with your gov
   </Card>
    <Card title="Performance & Cost" icon="comments-dollar" href="/cloud/ai-agents/performance-cost-agent" >
   </Card>
-   <Card title="AI Privacy Policy" icon="user-lock" href="/cloud/general/security-and-privacy" >
+   <Card title="AI Privacy Policy" icon="user-lock" href="/cloud/general/ai-privacy-policy" >
   </Card>
 </CardGroup>
