--- a/docs/cloud/ai-agents/ai-agents.mdx
+++ b/docs/cloud/ai-agents/ai-agents.mdx
@@ -3,7 +3,7 @@ title: "Elementary AI Agents"
 icon: "magic"
 ---
 
-**Ella is the intelligence layer that automates and enhances core data quality tasks. She allows your team to focus on value, not overhead.**
+**Ella is the intelligence layer that eliminates manual workflows and accelerates how data teams work.**
 
 She detects coverage gaps, recommends and generates tests, traces root causes, fixes issues, optimizes queries, and surfaces missing metadata—making your data AI-ready and compliant by default.
 
