--- a/docs/cloud/ai-agents/ai-agents.mdx
+++ b/docs/cloud/ai-agents/ai-agents.mdx
@@ -26,3 +26,5 @@ Her behavior is guided by clear, reviewable AI policies that align with your gov
    <Card title="AI Privacy Policy" icon="user-lock" href="/cloud/general/ai-privacy-policy" >
   </Card>
 </CardGroup>
+
+Want to learn more? [**Our experts will be happy to chat.**](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=64e4c20d-0ff3-4454-9387-c93b47afcee6)
