--- a/docs/cloud/ai-agents/ai-agents.mdx
+++ b/docs/cloud/ai-agents/ai-agents.mdx
@@ -27,4 +27,4 @@ Her behavior is guided by clear, reviewable AI policies that align with your gov
   </Card>
 </CardGroup>
 
-Want to learn more? [**Our experts will be happy to chat.**](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=64e4c20d-0ff3-4454-9387-c93b47afcee6)
+<Tip>Want to learn more? [**Our experts will be happy to chat.**](https://meetings-eu1.hubspot.com/joost-boonzajer-flaes/intro-call-docs?uuid=64e4c20d-0ff3-4454-9387-c93b47afcee6)</Tip>
