--- a/docs/cloud/ai-agents/test-recommendation-agent.mdx
+++ b/docs/cloud/ai-agents/test-recommendation-agent.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Test recommendation agent"
+title: "Test Recommendation AI Agent"
+sidebarTitle: "Test recommendation AI agent"
 icon: "vial-circle-check"
 ---
 
@@ -49,3 +50,5 @@ Once you're satisfied with the recommendations, the agent opens a pull request w
 ### Who It’s For
 
 Built for **analytics engineers and data engineers** who want to improve test coverage intelligently, avoid alert fatigue, and maintain high data quality without slowing down development.
+
+<Check>We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
