--- a/docs/cloud/ai-agents/test-recommendation-agent.mdx
+++ b/docs/cloud/ai-agents/test-recommendation-agent.mdx
@@ -3,16 +3,13 @@ title: "Test Recommendation AI Agent"
 sidebarTitle: "Test recommendation AI agent"
 icon: "vial-circle-check"
 ---
+**Make sure you’re covered—not by how many tests you write, but by how many problems you catch.** The Test Recommendation Agent analyzes your data asset, metadata, lineage, and existing test suite to suggest high-impact tests that match your team’s style and priorities.
 
-**Make sure you're covered—not by how many tests you write, but by how many problems you catch.** The Test Coverage Agent helps you achieve meaningful, consistent test coverage across your data pipelines, without the manual overhead.
+It helps you expand meaningful coverage, reduce alert fatigue, and maintain a reliable test strategy as your pipelines evolve.
 
-It analyzes your data model, usage patterns, lineage, and existing tests to recommend what to test and where. It adapts to your team's style, reduces alert fatigue, and preserves consistency across your test suite. The result is higher data quality, fewer blind spots, and more time focused on building - not debugging.
+### Using the Test Recommendation Agent
+Open the agent from the test configuration screen and ask a question like "What tests can ensure all of my customer data is up to date?" or "Which upstream tables need tests to protect my revenue dashboard?". The agent generates recommendations based on asset type, criticality, lineage, and your existing test configurations. You can approve, adjust, or skip suggestions as needed. Once approved, the agent opens a pull request with changes that follow your team’s current test structure.
 
-### Using the Test Coverage Agent
-
-Open the agent to review test coverage across your assets. It evaluates each asset's purpose, type, criticality, and usage, along with its metadata, lineage, and current test suite. It then recommends new tests, identifies redundant or low-impact ones, and suggests configuration changes to reduce noise.
-
-You can review and approve the recommendations in one click. The agent will automatically open a pull request with the proposed changes, that are aligned with your team’s existing test patterns and structure. You can also provide input to customize the recommendations before applying them.
 
 <Frame>
   <div style={{ paddingBottom: "64.98194945848375%" }}>
