--- a/docs/cloud/ai-agents/test-recommendation-agent.mdx
+++ b/docs/cloud/ai-agents/test-recommendation-agent.mdx
@@ -8,7 +8,7 @@ icon: "vial-circle-check"
 It helps you expand meaningful coverage, reduce alert fatigue, and maintain a reliable test strategy as your pipelines evolve.
 
 ### Using the Test Recommendation Agent
-Open the agent from the test configuration screen and ask a question like "What tests can ensure all of my customer data is up to date?" or "Which upstream tables need tests to protect my revenue dashboard?". The agent generates recommendations based on asset type, criticality, lineage, and your existing test configurations. You can approve, adjust, or skip suggestions as needed. Once approved, the agent opens a pull request with changes that follow your team’s current test structure.
+Open the agent from the test configuration screen and ask a question like **"What tests can ensure all of my customer data is up to date?"** or **"Which upstream tables need tests to protect my revenue dashboard?"**. The agent generates recommendations based on asset type, criticality, lineage, and your existing test configurations. You can approve, adjust, or skip suggestions as needed. Once approved, the agent opens a pull request with changes that follow your team’s current test structure.
 
 
 <Frame>
