--- a/docs/cloud/ai-agents/test-recommendation-agent.mdx
+++ b/docs/cloud/ai-agents/test-recommendation-agent.mdx
@@ -48,4 +48,4 @@ Once you're satisfied with the recommendations, the agent opens a pull request w
 
 Built for **analytics engineers and data engineers** who want to improve test coverage intelligently, avoid alert fatigue, and maintain high data quality without slowing down development.
 
-<Check>We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
+<Check>We take data privacy seriously. Read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
