--- a/docs/cloud/ai-agents/performance-cost-agent.mdx
+++ b/docs/cloud/ai-agents/performance-cost-agent.mdx
@@ -3,18 +3,16 @@ title: "Performance & cost agent"
 icon: "comments-dollar"
 ---
 
-_Coming soon!_
+_Coming soon_
 
-**Optimize long-running queries, eliminate performance bottlenecks, and reduce costs—without combing through logs or rewriting SQL by hand.** The Performance and Cost Agent helps you identify inefficiencies in your pipelines and fix them quickly, so your data stays fresh, fast, and within budget.
+**Optimize long-running queries, eliminate bottlenecks, and keep compute costs under control without digging through logs or rewriting SQL by hand.** The Performance and Cost Agent helps you identify inefficiencies in your pipelines and resolve them quickly, so your data stays fresh, fast, and within budget.
 
-By improving query speed and resource usage, this agent plays a critical role in helping teams meet data SLAs and ensure that products, dashboards, and AI models get updated data on time.
+It improves performance by analyzing query logic, historical execution patterns, and resource usage. This makes it easier to meet data SLAs and ensure products, dashboards, and AI models get the data they need, when they need it.
 
 ### Using the Performance and Cost Agent
+Trigger the agent from any asset flagged as underperforming or from a query known to be slow or expensive. It reviews the SQL, surrounding metadata, and historical performance, then recommends code changes and resource configuration tweaks to improve efficiency.
 
-You can trigger the agent from a slow or costly query, or from any asset flagged as underperforming. It analyzes the logic of the query by looking at the SQL itself, the surrounding metadata, and the historical performance profile.
-
-From there, the agent suggests targeted optimizations—both in the query code and in the configuration of resource-intensive steps. It estimates potential savings in runtime and cost, so you can see the impact before applying changes. Once you're ready, the agent can open a pull request with its proposed improvements and iterate further until the pipeline meets your performance goals.
-
+You’ll see an estimate of time and cost savings before applying changes. Once approved, the agent opens a pull request with its suggested improvements and can continue iterating until performance targets are met.
 
 <Frame>
   <div style={{ paddingBottom: "64.98194945848375%" }}>
@@ -68,3 +66,6 @@ Once recommendations are approved, the agent opens a pull request with the propo
 ### Who It’s For
 
 Built for **analytics engineers and data engineers** who need to improve pipeline speed, reduce costs, and ensure data products stay fresh and reliable without getting buried in manual query tuning.
+
+<Check>We take data privacy seriously. Read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
+
