--- a/docs/cloud/ai-agents/performance-cost-agent.mdx
+++ b/docs/cloud/ai-agents/performance-cost-agent.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Performance & cost agent"
+title: "Performance & Cost AI Agent"
+sidebarTitle: "Performance & cost AI agent"
 icon: "comments-dollar"
 ---
 
