--- a/docs/cloud/ai-agents/catalog-agent.mdx
+++ b/docs/cloud/ai-agents/catalog-agent.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Catalog agent"
+title: "Catalog AI agent"
+sidebarTitle: "Catalog AI agent"
 icon: "book-open"
 ---
 
@@ -50,5 +51,5 @@ For every asset, the agent provides real-time indicators of reliability:
 
 The Catalog Agent is built for **data analysts**, **business users**, **AI copilots**, and **intelligent applications** that need to find and understand the right data without making the data team a bottleneck.
 
-<Check>We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
+<Check>We take data privacy seriously. Read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
 
