--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Governance agent"
+title: "Governance AI Agent"
+sidebarTitle: "Governance AI agent"
 icon: "tags"
 ---
 
@@ -76,4 +77,4 @@ Once suggested changes are ready, the agent will open a **pull request** for you
 Built for **data platform teams, analytics engineers, and governance leads** who want to increase metadata coverage, enforce governance policies, and ensure their data is ready for AI — all without adding manual overhead.
 
 
-<Check>We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
+<Check>We take data privacy seriously. Read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
