--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -12,7 +12,7 @@ By learning from your environment’s existing conventions, the agent brings con
 
 ### **Using the Governance Agent**
 
-You can trigger the Governance Agent from the **Catalog screen** or directly from any asset view. It will analyze the asset’s metadata and context, validate it against both best practices and your custom policies, and generate a list of actionable suggestions. When you’re ready, the agent can open a pull request with the proposed metadata changes.
+You can trigger the Governance Agent from the Catalog screen, and ask it a question like "Which tables in the marketing domain are missing ownership?" It will analyze the asset’s metadata and context, validate it against both best practices and your custom policies, and generate a list of actionable suggestions. When you’re ready, the agent can open a pull request with the proposed metadata changes.
 
 <Frame>
   <div style={{ paddingBottom: "64.98194945848375%" }}>
@@ -74,7 +74,7 @@ Once suggested changes are ready, the agent will open a **pull request** for you
 
 ### Who It’s For
 
-Built for **data platform teams, analytics engineers, and governance leads** who want to increase metadata coverage, enforce governance policies, and ensure their data is ready for AI — all without adding manual overhead.
+Built for **data platform teams, analytics engineers, and governance leads** who want to increase metadata coverage, enforce governance policies, and ensure their data is ready for AI, without adding manual overhead.
 
 
 <Check>We take data privacy seriously. Read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
