--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Triage & resolution agent"
+title: "Triage & Resolution AI Agent"
+sidebarTitle: "Triage & resolution AI agent"
 icon: "toolbox"
 ---
 **Automates root cause analysis, clarifies the impact, and suggests actionable fixes so you spend less time triaging and more time solving what matters.** The result is a shift from manual investigation to a faster, more focused workflow, allowing you to focus on delivering business value rather than fighting fires.
