--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -9,7 +9,7 @@ Whether it's a failed test, a model issue, or an unexpected anomaly, it inspects
 
 ## Using the Triage & Resolution agent
 
-From the **Incident Management screen**, click **“Investigate with AI”** to trigger the agent. It will begin analyzing the incident and surface insights. You can follow along, ask clarifying questions, and when you're ready, allow the agent to **open a pull request** with its suggested fix - all within your review flow.
+From the Incident Management screen click **“Investigate with AI”** to trigger the agent. It will begin analyzing the incident and surface insights. You can follow along, ask clarifying questions, and when you're ready, allow the agent to open a pull request with its suggested fix - all within your review flow.
 
 <Frame>
   <div style={{ paddingBottom: "64.98194945848375%" }}>
@@ -66,5 +66,5 @@ Once the problem is identified, the agent can:
 
 Designed for **hands-on data professionals**, including data engineers, analytics engineers, and platform teams, who need a faster, more reliable way to stay on top of incidents without getting buried in triage work.
 
-<Check>We take data privacy seriously — read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
+<Check>We take data privacy seriously. Read our [**AI Privacy Policy**](/cloud/general/ai-privacy-policy) to understand how AI features are secured.</Check>
 
