--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -3,7 +3,9 @@ title: "Governance AI Agent"
 sidebarTitle: "Governance AI agent"
 icon: "tags"
 ---
-Learn more about Ella's full set of AI agents [here](/cloud/ai-agents/overview).
+
+<Card title="Learn more about Ella's full set of AI agents here" icon="hat-wizard" href="/cloud/ai-agents/overview" horizontal="true">
+</Card>
 
 **Governing your data isn’t just about internal organization, it’s the key to making your data reliably usable by both humans and AI.** Clear documentation, ownership, and classification enable intelligent agents, downstream models, and automation tools to interpret and act on your data with confidence.
 
