--- a/docs/cloud/ai-agents/governance-agent.mdx
+++ b/docs/cloud/ai-agents/governance-agent.mdx
@@ -4,12 +4,12 @@ sidebarTitle: "Governance AI agent"
 icon: "tags"
 ---
 
-<Card title="Learn more about Ella's full set of AI agents" icon="hat-wizard" href="/cloud/ai-agents/overview" horizontal="true">
+<Card title="Learn more about Ella's full set of AI agents" icon="droplet" href="/cloud/ai-agents/overview" horizontal="true">
 </Card>
 
-**Governing your data isn’t just about internal organization, it’s the key to making your data reliably usable by both humans and AI.** Clear documentation, ownership, and classification enable intelligent agents, downstream models, and automation tools to interpret and act on your data with confidence.
+**Governing your data isn’t just about internal organization, it’s the key to making your data reliably usable by both humans and AI.** 
 
-The Governance Agent helps you scale and maintain trusted, well-documented data assets without manual effort. It evaluates your metadata, identifies gaps, and suggests improvements, all based on how your organization already tags, documents, and assigns ownership.
+The Governance Agent helps you scale and maintain trusted, well-documented data assets without manual effort. It evaluates your metadata, identifies gaps, and suggests improvements, all based on how your organization already tags, documents, and assigns ownership. 
 
 By learning from your environment’s existing conventions, the agent brings consistency, policy enforcement, and AI-readiness across your pipelines.
 
