--- a/docs/cloud/ai-agents/triage-resolution-agent.mdx
+++ b/docs/cloud/ai-agents/triage-resolution-agent.mdx
@@ -3,6 +3,10 @@ title: "Triage & Resolution AI Agent"
 sidebarTitle: "Triage & resolution AI agent"
 icon: "toolbox"
 ---
+
+<Card title="Learn more about Ella's full set of AI agents" icon="droplet" href="/cloud/ai-agents/overview" horizontal="true">
+</Card>
+
 **Automates root cause analysis, clarifies the impact, and suggests actionable fixes so you spend less time triaging and more time solving what matters.** The result is a shift from manual investigation to a faster, more focused workflow, allowing you to focus on delivering business value rather than fighting fires.
 
 Whether it's a failed test, a model issue, or an unexpected anomaly, it inspects recent code changes, execution history, lineage, and, when allowed, the data itself. It prioritizes the incidents that matter, proposes a fix, and can open a pull request for you. That way, incidents stop slowing you down, and pipelines begin to fix themselves.
