--- a/docs/cloud/ai-agents/test-recommendation-agent.mdx
+++ b/docs/cloud/ai-agents/test-recommendation-agent.mdx
@@ -3,6 +3,10 @@ title: "Test Recommendation AI Agent"
 sidebarTitle: "Test recommendation AI agent"
 icon: "vial-circle-check"
 ---
+
+<Card title="Learn more about Ella's full set of AI agents" icon="droplet" href="/cloud/ai-agents/overview" horizontal="true">
+</Card>
+
 **Make sure you’re covered—not by how many tests you write, but by how many problems you catch.** The Test Recommendation Agent analyzes your data asset, metadata, lineage, and existing test suite to suggest high-impact tests that match your team’s style and priorities.
 
 It helps you expand meaningful coverage, reduce alert fatigue, and maintain a reliable test strategy as your pipelines evolve.
